# flir_gige

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
calib/: calib_flir_ax5.yml  calib_flir_gige.yml  draw_circles_grid.py  flir_a5.yml
cfg/: CalibProcDyn.cfg  FlirGigeDyn.cfg  ThermalProcDyn.cfg
cmake/: FindEbus.cmake  Findebus.cmake
include/calib_proc/: calib_proc_node.h
include/flir_gige/: flir_gige.h  flir_gige_node.h  flir_gige_ros.h  planck.h
include/flir_gige/thermal_proc/: thermal_proc.h
include/thermal_proc/: thermal_proc_node.h  thermal_proc_node.h.autosave
install/: README.md  install.bash  install.sh  set_puregev_gen
launch/: node.launch  nodelet.launch  proc.launch  test_calib.launch  thermal_proc.launch
math/: conversion.py
src/: flir_gige.cpp  flir_gige_main.cpp  flir_gige_node.cpp  flir_gige_nodelet.cpp
src/calib_proc/: calib_proc_main.cpp  calib_proc_node.cpp
src/flir_gige/: flir_gige.cpp  flir_gige_node.cpp  flir_gige_nodelet.cpp  flir_gige_ros.cpp
src/thermal_proc/: thermal_proc_main.cpp  thermal_proc_node.cpp  thermal_proc_nodelet.cpp
